--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 <body>
 
 	<div class="container">
-		
+
+		<div class="display"></div>
+
+		<input type="text" class="data">
+
+		<button>+</button>
+		<button>-</button>
+		<button>*</button>
+		<button>/</button>
+
 	</div>
 
 </body>
