--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 		<input type="text" class="data">
 
-		<button>+</button>
-		<button>-</button>
-		<button>*</button>
-		<button>/</button>
-		<button>=</button>
+		<button onclick="addToDisplay( '+' )">+</button>
+		<button onclick="addToDisplay( '-' )">-</button>
+		<button onclick="addToDisplay( '*' )">*</button>
+		<button onclick="addToDisplay( '/' )">/</button>
+		<button onclick="calculate()">=</button>
 
 	</div>
 
