--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
 
 	</div>
 
+<script>
+	function addToDisplay( sign )
+	{
+		document.querySelector( '.display' ).innerHTML = '<span>' + document.querySelector( '.data' ).value
+														+ '</span> <span>' + sign + '</span> ';
+	}
+</script>
 </body>
 </html>
