--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		if ( isNaN( data ) )
 		{
 			alert( 'Please input a number.' );
+			document.querySelector( '.data' ).focus();
 			return;
 		}
 
