--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 		}
 
 		document.querySelector( '.display' ).innerHTML = '<span>' + data + '</span> <span>' + sign + '</span> ';
+
+		// Clear data field for new value
+		document.querySelector( '.data' ).value = '';
 	}
 
 </script>
