--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 		// Clear data field for new value
 		document.querySelector( '.data' ).value = '';
+		document.querySelector( '.data' ).focus();
 	}
 
 </script>
