--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
 		document.querySelector( '.data' ).focus();
 	}
 
+	function calculate()
+	{
+		// Get old number
+		const oldNum = parseFloat( document.querySelector( '.display' ).childNodes[ 0 ].innerText );
+
+		// Get the new number and add it to the display
+		const newNum = parseFloat( document.querySelector( '.data' ).value );
+		document.querySelector( '.data' ).value = '';
+		document.querySelector( '.display' ).innerHTML += '<span>' + newNum + '</span> <span>=</span> ';
+
+		// Get sign
+		const sign = document.querySelector( '.display' ).childNodes[ 2 ].innerText;
+
+		// Based on the sign, calculate the result
+		let result = 0;
+		if ( sign === '+' ) result = oldNum + newNum;
+		else if ( sign === '-' ) result = oldNum - newNum;
+		else if ( sign === '*' ) result = oldNum * newNum;
+		else if ( sign === '/' ) result = oldNum / newNum; // newNum can't be zero
+
+		// Show the result
+		document.querySelector( '.display' ).innerHTML += '<span>' + result + '</span>';
+	}
+
 </script>
 </body>
 </html>
