--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		if ( sign === '+' ) result = oldNum + newNum;
 		else if ( sign === '-' ) result = oldNum - newNum;
 		else if ( sign === '*' ) result = oldNum * newNum;
-		else if ( sign === '/' ) result = oldNum / newNum; // newNum can't be zero
+		else if ( sign === '/' ) result = oldNum / newNum;
 
 		// Show the result
 		document.querySelector( '.display' ).innerHTML += '<span>' + result + '</span>';
