--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<div class="container">
 
-		<div class="display"></div>
+		<div class="display">&nbsp;</div>
 
 		<input type="text" class="data">
 
