--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<div class="display">&nbsp;</div>
 
-		<input type="text" class="data">
+		<input type="text" class="data" size="40">
 
 		<button onclick="addToDisplay( '+' )">+</button>
 		<button onclick="addToDisplay( '-' )">-</button>
